--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+::-webkit-scrollbar{
+    width: 5px;
+}
+
+::-webkit-scrollbar-thumb{
+    background-color: purple;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-track{
+    background-color: #000;
+}
+
+
